add html files with the css style

--- a/languages.html
+++ b/languages.html
@@ -3,13 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Yongsi Liu Web Page</title>
+	<link rel="stylesheet" type="text/css" href="style/normalize.css">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
+	<header>
+    <div class="heading">
+      <h1>Language</h1>
+    </div>
+    <div class="nav">
 	<ul>
-		<li> <a href="https://yliu236.github.io/ITM361-Project1/index.html"> Get to know Yongsi Liu </a></li>
-		<li> <a href= "https://yliu236.github.io/ITM361-Project1/resume.html"> My Resume</a></li>
-		<li> <a href="https://yliu236.github.io/ITM361-Project1/languages.html">Languages</a></li>
+		<li> <a href="index.html"> Get to know Yongsi Liu </a></li>
+		<li> <a href= "resume.html"> My Resume</a></li>
+		<li> <a href=#>Languages</a></li>
 	</ul>
+	</div>
 	<h1>Languages</h1>
 		<h3> I am a trilingual speaker and still wanting to learn more lanuages.</h3>
 			<img src="Images/chinese.jpg" alt="Chinese"/>
