--- a/resume.html
+++ b/resume.html
@@ -3,14 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Yongsi Liu Web Page</title>
+	<link rel="stylesheet" type="text/css" href="style/normalize.css">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
+	<header>
+    <div class="heading">
+      <h1>Yongsi Liu Resume</h1>
+    </div>
+    <div class="nav">
 	<ul>
-		<li> <a href="https://yliu236.github.io/ITM361-Project1/index.html"> Get to know Yongsi Liu </a></li>
-		<li> <a href= "https://yliu236.github.io/ITM361-Project1/resume.html"> My Resume</a></li>
-		<li> <a href="https://yliu236.github.io/ITM361-Project1/languages.html">Languages</a></li>
+		<li> <a href="index.html"> Get to know Yongsi Liu </a></li>
+		<li> <a href= #>My Resume</a></li>
+		<li> <a href="languages.html">Languages</a></li>
 	</ul>
-	<h1> Yongsi Liu Resume</h1>
+	</div>
 		<h4> SOFTWARE ENGINEER · COMPUTER SCIENCE MAJOR · ILLINOIS INSTITUTE OF TECHNOLOGY </h6>
 		<h4>222 W 26th ST, Chicago, IL,60616 | 312.522.6283 | vvvyongsi@gmail.com </h5>
 		<h2>About me </h2>
