--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Yongsi Liu Web Page</title>
+	<link rel="stylesheet" type="text/css" href="style/normalize.css">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
+	<header>
+    <div class="heading">
+      <h1>Welcome to Yongsi Liu's Website</h1>
+    </div>
+    <div class="nav">
 	<ul>
-		<li> <a href="https://yliu236.github.io/ITM361-Project1/index.html"> Get to know Yongsi Liu </a></li>
-		<li> <a href= "https://yliu236.github.io/ITM361-Project1/resume.html"> My Resume</a></li>
-		<li> <a href="https://yliu236.github.io/ITM361-Project1/languages.html">Languages</a></li>
+		<li> <a href=#>Get to know Yongsi Liu </a></li>
+		<li> <a href= "resume.html"> My Resume</a></li>
+		<li> <a href="languages.html">Languages</a></li>
 	</ul>
-	<h1> Yongsi Liu</h1>
+	</div>
 		<img src="Images/self.jpg" alt="myself"/>
 		<h2>My hometown</h2>
 			<img src="Images/Guangzhou.jpg" alt="Gunagzhou"/>
