still not seeing the style on the pages.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="nav">
 	<ul>
-		<li> <a href=#>Get to know Yongsi Liu </a></li>
+		<li> <a href= "index.html" > Get to know Yongsi Liu </a></li>
 		<li> <a href= "resume.html"> My Resume</a></li>
 		<li> <a href="languages.html">Languages</a></li>
 	</ul>
