--- a/languages.html
+++ b/languages.html
@@ -15,7 +15,7 @@
 	<ul>
 		<li> <a href="index.html"> Get to know Yongsi Liu </a></li>
 		<li> <a href= "resume.html"> My Resume</a></li>
-		<li> <a href=#>Languages</a></li>
+		<li> <a href="languages.html">Languages</a></li>
 	</ul>
 	</div>
 	<h1>Languages</h1>
