--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
     <div class="nav">
 	<ul>
 		<li> <a href="index.html"> Get to know Yongsi Liu </a></li>
-		<li> <a href= #>My Resume</a></li>
+		<li> <a href= "resume.html">My Resume</a></li>
 		<li> <a href="languages.html">Languages</a></li>
 	</ul>
 	</div>
