put back a missing header close bar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<li> <a href="languages.html">Languages</a></li>
 	</ul>
 	</div>
+	</header>
 		<img src="Images/self.jpg" alt="myself"/>
 		<h2>My hometown</h2>
 			<img src="Images/Guangzhou.jpg" alt="Gunagzhou"/>
