--- a/resume.html
+++ b/resume.html
@@ -18,6 +18,7 @@
 		<li> <a href="languages.html">Languages</a></li>
 	</ul>
 	</div>
+	</header>
 		<h4> SOFTWARE ENGINEER · COMPUTER SCIENCE MAJOR · ILLINOIS INSTITUTE OF TECHNOLOGY </h6>
 		<h4>222 W 26th ST, Chicago, IL,60616 | 312.522.6283 | vvvyongsi@gmail.com </h5>
 		<h2>About me </h2>
