--- a/languages.html
+++ b/languages.html
@@ -18,6 +18,7 @@
 		<li> <a href="languages.html">Languages</a></li>
 	</ul>
 	</div>
+	</header>
 	<h1>Languages</h1>
 		<h3> I am a trilingual speaker and still wanting to learn more lanuages.</h3>
 			<img src="Images/chinese.jpg" alt="Chinese"/>
