--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 	<header>
     <div class="heading">
-      <h1>Language</h1>
+      <h1>Welcome to Yongsi Liu's Website</h1>
     </div>
     <div class="nav">
 	<ul>
-		<li> <a href="index.html"> Get to know Yongsi Liu </a></li>
-		<li> <a href= "resume.html"> My Resume</a></li>
+		<li> <a href="index.html" > Get to know Yongsi Liu </a></li>
+		<li> <a href="resume.html"> My Resume</a></li>
 		<li> <a href="languages.html">Languages</a></li>
 	</ul>
 	</div>
