--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
     <div class="heading">
-      <h1>Language</h1>
+      <h1>Resume</h1>
     </div>
     <div class="nav">
 	<ul>
