update in terms of the TA feedback

--- a/languages.html
+++ b/languages.html
@@ -3,27 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Yongsi Liu Web Page</title>
-	<link rel="stylesheet" href="Style/normalize.css">
-    <link rel="stylesheet" href="Style/style.css">
+	<link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 	<header>
-    <div class="heading">
-      <h1>Language</h1>
-    </div>
-    <div class="nav">
-	<ul>
-		<li> <a href="index.html"> Get to know Yongsi Liu </a></li>
-		<li> <a href="resume.html"> My Resume</a></li>
-		<li> <a href="languages.html">Languages</a></li>
-	</ul>
-	</div>
+	    <div class="heading">
+	      <h1>Language</h1>
+	    </div>
+	    <nav>
+			<ul>
+				<li> <a href="index.html"> Get to know Yongsi Liu </a></li>
+				<li> <a href="resume.html"> My Resume</a></li>
+				<li> <a href="languages.html">Languages</a></li>
+			</ul>
+		</nav>
+		</div>
 	</header>
 		<h3> I am a trilingual speaker and still wanting to learn more lanuages.</h3>
-			<img src="Images/chinese.jpg" alt="Chinese"/>
+			<img src="images/chinese.jpg" alt="Chinese" class="center"/>
 		<h3> My first language is Cantonese since I am hometown is Guangzhou, a city in the southern China. However, when I started to go to school, I learnt Mandarin and speak Mandarin while I was at school in China. While in school, I also learnt English as well, and now I live in the US, I speak English, Cantonese and Mandarin every day when I will be in different situation and with different people.</h3>
-			<img src="Images/english.jpg" alt="English"/>
+			<img src="images/english.jpg" alt="English" class="center"/>
 		<h3>The language I want to learn and try to master it next will be spanish. The reason why it's that I think it's one of the most popular languages and I think some of the words sound very similar to Cantonese. </h3>
-			<img src="Images/spanish.jpg" alt="Spanish"/>
+			<img src="images/spanish.jpg" alt="Spanish" class="center"/>
 </body>
 </html>
