--- a/resume.html
+++ b/resume.html
@@ -3,21 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Yongsi Liu Web Page</title>
-	<link rel="stylesheet" href="Style/normalize.css">
-    <link rel="stylesheet" href="Style/style.css">
+	<link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 	<header>
     <div class="heading">
       <h1>Resume</h1>
     </div>
-    <div class="nav">
-	<ul>
-		<li> <a href="index.html"> Get to know Yongsi Liu </a></li>
-		<li> <a href="resume.html"> My Resume</a></li>
-		<li> <a href="languages.html">Languages</a></li>
-	</ul>
-	</div>
+    <nav>
+		<ul>
+			<li> <a href="index.html"> Get to know Yongsi Liu </a></li>
+			<li> <a href="resume.html"> My Resume</a></li>
+			<li> <a href="languages.html">Languages</a></li>
+		</ul>
+	</nav>
 	</header>
 		<h4> SOFTWARE ENGINEER · COMPUTER SCIENCE MAJOR · ILLINOIS INSTITUTE OF TECHNOLOGY </h4>
 		<h4>222 W 26th ST, Chicago, IL,60616 | 312.522.6283 | vvvyongsi@gmail.com </h4>
